k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-java
  template:
    metadata:
      labels:
        app: api-java
    spec:
      containers:
        - name: api-java
          image: netoparikh/api-java:latest
          ports:
            - containerPort: 8080
