k8s/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
spec:
  containers:
    - name: postgres
      image: postgres:15
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: init-script
      configMap:
        name: init-sql-script
    - name: postgres-storage
      persistentVolumeClaim:
        claimName: postgres-pvc
