k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-java
spec:
  selector:
    app: api-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
